<resources>
    <string name="app_name">Transformers Battle</string>

    <!-- ARENA ACTIVITY -->
    <string name="menu_action_arena_battle">Battle</string>

    <!-- TRANSFORMERS ACTIVITY -->
    <string name="title_toolbar_transformer_new">New Transformer</string>
    <string name="title_toolbar_transformer_edit">Edit Transformer</string>
    <string name="menu_action_transformer_save">Save</string>
    <string name="menu_action_transformer_update">Update</string>
    <string name="hint_transformer_name">Name</string>
    <string name="hint_transformer_team">Team</string>
    <string name="text_transformer_team_autobots">Autobots</string>
    <string name="text_transformer_team_decepticons">Decepticons</string>

    <!-- BATTLE DIALOG -->
    <string name="btn_battle_close">Close</string>
    <string name="text_battle_no_fight">No battle!</string>
    <string name="text_battle_all_destroyed">All transformers destroyed :(</string>
    <string name="text_battle_tie">Tie :)</string>
    <string name="text_battle_winning_team">Winning team (%1$s): %2$s</string>
    <string name="text_battle_survivors">Survivors from the losing team (%1$s): %2$s</string>
    <string name="text_battle_team_autobots">Autobots</string>
    <string name="text_battle_team_decepticons">Decepticons</string>

    <plurals name="text_battle_number">
        <item quantity="one">%d battle</item>
        <item quantity="other">%d battles</item>
    </plurals>

    <!-- SHARED -->
    <string name="hint_transformer_stats_strength">Strength</string>
    <string name="hint_transformer_stats_intelligence">Intelligence</string>
    <string name="hint_transformer_stats_speed">Speed</string>
    <string name="hint_transformer_stats_endurance">Endurance</string>
    <string name="hint_transformer_stats_rank">Rank</string>
    <string name="hint_transformer_stats_courage">Courage</string>
    <string name="hint_transformer_stats_firepower">Firepower</string>
    <string name="hint_transformer_stats_skill">Skill</string>

</resources>
